# pace26checker

./: Cargo.toml  README.md
.github/workflows/: build.yml  build_linux.yml  build_osx.yml  build_win.yml
src/: bin_forest.rs  bin_tree.rs  bin_tree_with_parent.rs  instance_reader.rs  lib.rs  lint_leaf_labels_coverage.rs  main.rs  options.rs  solution_reader.rs
src/checks/: bin_forest.rs  bin_tree_with_parent.rs  checker.rs  lint_leaf_labels_coverage.rs  mod.rs
src/digest/: algo.rs  digest_output.rs  mod.rs
src/io/: digest.rs  forest_dot_writer.rs  instance_reader.rs  mod.rs  solution_reader.rs
testcases/instance_only/: stride_format_json_error.in  whitespace.in
testcases/tiny/: tiny01.in  tiny01.out
testcases/valid/: score1_sa2e2l7j.in  score1_sa2e2l7j.out  score2_w3rrua7t.in
tests/: testcase_files.rs
