[package]
name = "pace26checker"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
default = []
with_digest = ["dep:digest", "dep:sha2", "dep:serde"]

[dependencies]
thiserror = "2.0.17"
pace26io = { version = "0.1" }

digest = { version = "0.10.7", optional = true }
log = "0.4.28"
sha2 = { version = "0.10.9", optional = true }
structopt = "0.3.26"

tracing = "0.1.41"
tracing-subscriber = "0.3.20"

serde = { version = "1.0.228", optional = true }
serde_json = "1.0.145"

[dev-dependencies]
glob = "0.3.3"
hex-literal = "1.1.0"
regex = "1.12.2"

[profile.smaller-release]
inherits = "release"
lto = true
opt-level = "z"
strip = true 
codegen-units = 1
panic = "abort"
