[package]
name = "pace26checker"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
default = []
with_digest = ["dep:digest", "dep:sha2", "dep:serde", "dep:itertools", "dep:paste"]

[dependencies]
thiserror = "2.0.17"
pace26io = { version = "0.2" }

tracing = "0.1.41"
tracing-subscriber = "0.3.20"

serde_json = "1.0.145"

digest = { version = "0.10.7", optional = true }
sha2   = { version = "0.10.9", optional = true }
serde = { version = "1.0.228", optional = true }
itertools = {version= "0.14.0" , optional = true}

clap = { version = "4.5.53", features = ["derive"] }
paste = { version = "1.0.15", optional = true }

[dev-dependencies]
glob = "0.3.3"
hex-literal = "1.1.0"
regex = "1.12.2"

[profile.smaller-release]
inherits = "release"
lto = true
opt-level = "z"
strip = true 
codegen-units = 1
panic = "abort"
